# patch-xml

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  grcov.yaml
resources/: test.yaml  test2.yaml  update.md
src/: lib.rs  main.rs
src/input/: common.rs  config.rs  mod.rs  svd.rs
src/input/config/: config.rs
src/input/svd/: basic_types.rs  cluster.rs  device.rs  field.rs  mod.rs  peripheral.rs  register.rs  svd.rs
src/output/: basic_types.rs  cluster.rs  device.rs  field.rs  mod.rs  peripheral.rs  register.rs  svd.rs
src/patch_processor/: mod.rs
src/patch_structure/: filter.rs  mod.rs  modification_type.rs  query.rs  reference_expression.rs  refex_segment.rs  regex.rs  simple_value_type.rs  value.rs
src/xml_structure/: bidirectional_xml_tree.rs  mod.rs  xml_path.rs  xml_tree.rs
tests/: attribute_tests.rs  check_general.rs  check_peripheral_interrupts.rs  check_peripheral_registers.rs  check_peripherals.rs  check_post_check.rs  check_stm_svds.rs  modification_tests.rs  move_copy_tests.rs  multi_query_tests.rs  referencing_tests.rs  single_query_tests.rs  utils.rs
