[package]
name = "patch-xml"
version = "0.0.1"
authors = ["Alexander Huymayer"]
edition = "2018"
description = "Load and patch xml files. Pre-alpha version. No stable interface until version 0.1.0."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/VilNeo/patch-xml"
keywords = ["svd", "embedded"]

[dependencies]
xmltree = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
itertools = "0.10"
#ToDo: Find out how to include it for tests only
indoc = "1.0"
