[package]
name = "patch-svd"
version = "0.0.4"
authors = ["Alexander Huymayer"]
edition = "2018"
description = "Load and patch svd files. Pre-alpha version. No stable interface until version 0.1.0."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/VilNeo/patch-svd"
keywords = ["svd", "embedded"]

[dependencies]
itertools = "0.9"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde-xml-rs = "0.4"
patch-xml = { path = "../patch-xml", version = "0.0.1" }
