[package]
name = "patch-xml"
version = "0.0.2"
authors = ["Alexander Huymayer"]
edition = "2018"
description = "Load and patch xml files. Pre-alpha version. No stable interface until version 0.1.0."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/VilNeo/patch-xml"
keywords = ["xml", "patch"]

[dependencies]
xmltree = {version = "0.10", features = ["attribute-order"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
itertools = "0.10"
indexmap = {version = "1.6.2", features = ["serde"] }

[dev-dependencies]
indoc = "1.0"
